[gd_scene load_steps=4 format=3 uid="uid://bmu608iymm43o"]

[ext_resource type="FontFile" uid="uid://gdugqcabtsee" path="res://assets/Kenney Bold.ttf" id="1_37p78"]
[ext_resource type="Script" uid="uid://dqp0psrrjf75v" path="res://hud.gd" id="1_64ctp"]

[sub_resource type="LabelSettings" id="LabelSettings_64ctp"]
font = ExtResource("1_37p78")
font_size = 48

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_64ctp")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Message" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Coin Dash!"
label_settings = SubResource("LabelSettings_64ctp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Score" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_64ctp")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Time" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_64ctp")
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -124.0
offset_top = -80.0
offset_right = 124.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 48
text = "Start"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
